# FilesystemWatcher

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddObjectDialog.cpp  AddObjectDialog.h  AddObjectDialog.ui  CMakeLists.txt  EventsTableModel.cpp  EventsTableModel.h  FilesystemWatcher.cpp  FilesystemWatcher.h  FilesystemWatcher.rc.in  FilesystemWatcher.ui  LogiLED.cpp  LogiLED.h  ObjectsTableModel.cpp  ObjectsTableModel.h  Utils.h  WatchThread.cpp  WatchThread.h  main.cpp  readme.md
installer/: script.iss.in
rsc/: resources.qrc
